--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
+    "test": "jest",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "dependencies": {
@@ -12,15 +13,17 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^17.2.1",
-    "express": "~4.16.1",
+    "express": "^4.21.2",
     "express-oauth2-jwt-bearer": "^1.6.1",
     "http-errors": "~1.6.3",
     "joi": "^18.0.1",
     "mongoose": "^8.18.0",
-    "morgan": "~1.9.1",
+    "morgan": "^1.10.1",
     "prettier": "^3.6.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "jest": "^30.1.2",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
