--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-oauth2-jwt-bearer": "^1.6.1",
     "http-errors": "~1.6.3",
     "joi": "^18.0.1",
+    "module-alias": "^2.2.3",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
     "prettier": "^3.6.2"
@@ -25,5 +26,13 @@
     "jest": "^30.1.2",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4"
+  },
+  "_moduleAliases": {
+    "@src": "src"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^@src/(.*)$": "<rootDir>/src/$1"
+    }
   }
 }
